@@ -73,12 +73,6 @@
       <version>3.3.1</version>
     </dependency>
     <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-all</artifactId>
-      <version>1.3</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
@@ -87,7 +81,7 @@
     <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derby</artifactId>
-      <version>10.11.1.1</version>
+      <version>10.12.1.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -112,15 +106,7 @@
         <directory>${project.build.sourceDirectory}</directory>
         <excludes>
           <exclude>**/*.java</exclude>
-          <exclude>**/pom.properties</exclude>
         </excludes>
-      </resource>
-      <resource>
-        <directory>${project.build.sourceDirectory}</directory>
-        <filtering>true</filtering>
-        <includes>
-          <include>**/pom.properties</include>
-        </includes>
       </resource>
     </resources>
     <testResources>
@@ -170,11 +156,28 @@
             <phase>package</phase>
             <configuration>
               <descriptors>
-                <descriptor>${basedir}/src/main/assembly/bundle.xml</descriptor>
+                <descriptor>${project.basedir}/src/main/assembly/bundle.xml</descriptor>
               </descriptors>
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            -DtargetDir=${project.build.directory}
+            -Djava.security.manager=default
+            -Djava.security.policy=${project.basedir}/src/test/java/databases/blog/server.policy
+          </argLine>
+          <systemProperties>
+            <property>
+              <name>derby.stream.error.file</name>
+              <value>${project.build.directory}/derby.log</value>
+            </property>
+          </systemProperties>
+        </configuration>
       </plugin>
     </plugins>
   </build>
